fix header on firefox

--- a/src/client/css/header.css
+++ b/src/client/css/header.css
@@ -141,7 +141,7 @@ nav {
 nav a {
     padding: 0 calc(var(--header-link-max-padding)) 0;
 	white-space: nowrap; /* Prevent text from wrapping */
-	overflow: hidden; /* Hide overflow if needed */
+	overflow: clip; /* Hide overflow if needed */
 }
 
 nav span {
